--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,87 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: 'Arial', sans-serif;
+    background-color: #f4f4f4;
+    margin: 50px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+  }
+
+  .title-container {
+    width: 100%;
+    height: 50px;
+    background-color: #2196f3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .app-container {
+    width: 80%;
+    max-width: 800px;
+    margin-top: 50px;
+    margin-left: 70px;
+    padding: 20px;
+    display: flex; 
+  }
+  
+  .form-container,
+  .table-container {
+    flex: 1; 
+    padding: 20px;
+    box-sizing: border-box;
+    border: 1px solid #ddd; 
+    border-radius: 8px; 
+  }
+  
+  .form-container {
+    margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+    input {
+        margin-bottom: 10px;
+  }
+}
+  
+  .table-container {
+    margin-left: 10px;
+  }
+  
+  
+  .table {
+  width: 100%;
+  border-collapse: collapse;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.table th, .table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+.table th {
+  background-color: #3b3ee5;
+  color: #fff;
+}
+
+.table td {
+  color: #333;
+}
+
+.table td button {
+  background-color: #f44336;
+  color: #fff;
+  padding: 5px;
+  border: none;
+  border-radius: 4px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.table td button.edit {
+  background-color: #2196f3;
 }
